--- a/IzzyLeftJoin.ipynb
+++ b/IzzyLeftJoin.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "      dtype=int32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[440 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "[193600 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -768,14 +768,218 @@
        "[193600 rows x 9 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged_df = pd.merge(customer,cost_cand_cust, on='CustomerId', how='left')\n",
-    "merged_df"
+    "merged_df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6j/684t07rd68n_8_wcjw3dvn3r0000gn/T/ipykernel_67087/2036585720.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  y = merged_df.groupby(['cluster','CandidateId']).sum()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Customers_x</th>\n",
+       "      <th>CustomerNorthing</th>\n",
+       "      <th>CustomerEasting</th>\n",
+       "      <th>Candidates</th>\n",
+       "      <th>Customers_y</th>\n",
+       "      <th>CostCandidateCustomers</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cluster</th>\n",
+       "      <th>CandidateId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
+       "      <th>AB10</th>\n",
+       "      <td>383</td>\n",
+       "      <td>1627144</td>\n",
+       "      <td>145677</td>\n",
+       "      <td>2</td>\n",
+       "      <td>383</td>\n",
+       "      <td>1.075244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB11</th>\n",
+       "      <td>383</td>\n",
+       "      <td>1627144</td>\n",
+       "      <td>145677</td>\n",
+       "      <td>4</td>\n",
+       "      <td>383</td>\n",
+       "      <td>1.075038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB12</th>\n",
+       "      <td>383</td>\n",
+       "      <td>1627144</td>\n",
+       "      <td>145677</td>\n",
+       "      <td>6</td>\n",
+       "      <td>383</td>\n",
+       "      <td>1.097217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB13</th>\n",
+       "      <td>383</td>\n",
+       "      <td>1627144</td>\n",
+       "      <td>145677</td>\n",
+       "      <td>8</td>\n",
+       "      <td>383</td>\n",
+       "      <td>1.075535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB14</th>\n",
+       "      <td>383</td>\n",
+       "      <td>1627144</td>\n",
+       "      <td>145677</td>\n",
+       "      <td>10</td>\n",
+       "      <td>383</td>\n",
+       "      <td>1.071918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">39</th>\n",
+       "      <th>TD5</th>\n",
+       "      <td>4038</td>\n",
+       "      <td>8700047</td>\n",
+       "      <td>1795027</td>\n",
+       "      <td>4730</td>\n",
+       "      <td>4038</td>\n",
+       "      <td>4.509001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TD6</th>\n",
+       "      <td>4038</td>\n",
+       "      <td>8700047</td>\n",
+       "      <td>1795027</td>\n",
+       "      <td>4741</td>\n",
+       "      <td>4038</td>\n",
+       "      <td>4.381739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TD7</th>\n",
+       "      <td>4038</td>\n",
+       "      <td>8700047</td>\n",
+       "      <td>1795027</td>\n",
+       "      <td>4752</td>\n",
+       "      <td>4038</td>\n",
+       "      <td>4.409694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TD8</th>\n",
+       "      <td>4038</td>\n",
+       "      <td>8700047</td>\n",
+       "      <td>1795027</td>\n",
+       "      <td>4763</td>\n",
+       "      <td>4038</td>\n",
+       "      <td>4.570192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TD9</th>\n",
+       "      <td>4038</td>\n",
+       "      <td>8700047</td>\n",
+       "      <td>1795027</td>\n",
+       "      <td>4774</td>\n",
+       "      <td>4038</td>\n",
+       "      <td>4.641274</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17600 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Customers_x  CustomerNorthing  CustomerEasting  \\\n",
+       "cluster CandidateId                                                   \n",
+       "0       AB10                 383           1627144           145677   \n",
+       "        AB11                 383           1627144           145677   \n",
+       "        AB12                 383           1627144           145677   \n",
+       "        AB13                 383           1627144           145677   \n",
+       "        AB14                 383           1627144           145677   \n",
+       "...                          ...               ...              ...   \n",
+       "39      TD5                 4038           8700047          1795027   \n",
+       "        TD6                 4038           8700047          1795027   \n",
+       "        TD7                 4038           8700047          1795027   \n",
+       "        TD8                 4038           8700047          1795027   \n",
+       "        TD9                 4038           8700047          1795027   \n",
+       "\n",
+       "                     Candidates  Customers_y  CostCandidateCustomers  \n",
+       "cluster CandidateId                                                   \n",
+       "0       AB10                  2          383                1.075244  \n",
+       "        AB11                  4          383                1.075038  \n",
+       "        AB12                  6          383                1.097217  \n",
+       "        AB13                  8          383                1.075535  \n",
+       "        AB14                 10          383                1.071918  \n",
+       "...                         ...          ...                     ...  \n",
+       "39      TD5                4730         4038                4.509001  \n",
+       "        TD6                4741         4038                4.381739  \n",
+       "        TD7                4752         4038                4.409694  \n",
+       "        TD8                4763         4038                4.570192  \n",
+       "        TD9                4774         4038                4.641274  \n",
+       "\n",
+       "[17600 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = merged_df.groupby(['cluster','CandidateId']).sum()\n",
+    "y"
    ]
   }
  ],
