--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -38,12 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "customer = pd.read_csv('CustomerId.csv').merge(pd.read_csv('CustomerNorthing.csv'), how='inner').merge(pd.read_csv('CustomerEasting.csv'), how='inner')\n",
-    "X = customer[['CustomerNorthing', 'CustomerEasting']].values  # Convert DataFrame to NumPy array\n"
+    "X = customer[['CustomerNorthing', 'CustomerEasting']].values  # Convert DataFrame to NumPy array\n",
+    "demand = pd.read_csv('Demand.csv')"
    ]
   },
   {
@@ -219,6 +220,427 @@
     "    closest_points_within_X.append(closest_point_within_X_idx)\n",
     "\n",
     "print(closest_points_within_X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices in cluster 0: [190 191]\n",
+      "Indices in cluster 1: [ 0  1  2  3  4  5  6  7  8  9 10 11 13 14 21 22 23]\n",
+      "Indices in cluster 2: [241 242 243 244 245 246 247 248 249 250 256 257 258 259 266]\n",
+      "Indices in cluster 3: [183 184 186]\n",
+      "Indices in cluster 4: [161 164 179 180 181 315 316 317 318 319 320 321 322 323 324 325 326 327\n",
+      " 328 329]\n",
+      "Indices in cluster 5: [78 79 80 89 90 91 92 93 94 95 98]\n",
+      "Indices in cluster 6: [271 272 273 274 275 276 281 282 283]\n",
+      "Indices in cluster 7: [396 397 398 399 400 401 402 408 409 410 412 413]\n",
+      "Indices in cluster 8: [118 119 120 121 122 123 124 125 126 127 128 129 130 132 384 385 386 387\n",
+      " 388]\n",
+      "Indices in cluster 9: [210 211 215 216 219 277 278 279 280]\n",
+      "Indices in cluster 10: [231 232 234 238 239 422]\n",
+      "Indices in cluster 11: [58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 81 82 83]\n",
+      "Indices in cluster 12: [224 225 226 227 233 235 236 237]\n",
+      "Indices in cluster 13: [100 101 102 103]\n",
+      "Indices in cluster 14: [342 353 354 355 356 357 358 359 360 361 362 363]\n",
+      "Indices in cluster 15: [368 369 370 375 376 378 379 380]\n",
+      "Indices in cluster 16: [214 217 218]\n",
+      "Indices in cluster 17: [348 364 365 366 367 371 372 373 374 377 381]\n",
+      "Indices in cluster 18: [ 33  34  35  36  37  38 382 383 389 390 391 392 393 394 395]\n",
+      "Indices in cluster 19: [ 19  20  31  32 220 221 222 223 405 406 407]\n",
+      "Indices in cluster 20: [15 16 17 18 24 25 26 27 28 29 30]\n",
+      "Indices in cluster 21: [185 187 188 189]\n",
+      "Indices in cluster 22: [12 39 40 41 42 43]\n",
+      "Indices in cluster 23: [44 45 46 53 54 55 56 57]\n",
+      "Indices in cluster 24: [251 252 253 254 255 260 261 262 263 264 265 267 268 269 270]\n",
+      "Indices in cluster 25: [434 435 436 437 438 439]\n",
+      "Indices in cluster 26: [48 49 50 51 52]\n",
+      "Indices in cluster 27: [ 88  96  97  99 295 296 302]\n",
+      "Indices in cluster 28: [133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 151\n",
+      " 152 153 154 155 156 157 158 159 160 162 163 165 172 173 174 175 176 177\n",
+      " 178]\n",
+      "Indices in cluster 29: [192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209\n",
+      " 240 403 404]\n",
+      "Indices in cluster 30: [287 288 289 290 291 292 293 294 299 300 301]\n",
+      "Indices in cluster 31: [284 285 286]\n",
+      "Indices in cluster 32: [212 213]\n",
+      "Indices in cluster 33: [115 117 150 166 167 168 169 170 171 303 304 305 306 307 308 309]\n",
+      "Indices in cluster 34: [131 347 349 350 351 352 411 423 424]\n",
+      "Indices in cluster 35: [182 330 331 332 333 334 335 336 337 338 339 340 341 343 344 345 346]\n",
+      "Indices in cluster 36: [ 84  85  86  87 104 105 106 107 108 109 110 111 112 113 114 116 297 298]\n",
+      "Indices in cluster 37: [ 47 310 311 312 313 314]\n",
+      "Indices in cluster 38: [425 426 427 428 429 430 431 432 433]\n",
+      "Indices in cluster 39: [228 229 230 414 415 416 417 418 419 420 421]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster_indices = {}\n",
+    "\n",
+    "for cluster_label in range(n_clusters):\n",
+    "    cluster_indices[cluster_label] = np.where(labels == cluster_label)[0]\n",
+    "\n",
+    "# Create separate arrays for each grouping of indices\n",
+    "cluster_arrays = [indices for _, indices in cluster_indices.items()]\n",
+    "\n",
+    "# Print the separate arrays\n",
+    "for i, indices_array in enumerate(cluster_arrays):\n",
+    "    print(f\"Indices in cluster {i}: {indices_array}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 0:\n",
+      "Products\n",
+      "1     4623\n",
+      "2     2427\n",
+      "3    20367\n",
+      "4     1459\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 1:\n",
+      "Products\n",
+      "1    119809\n",
+      "2     66662\n",
+      "3    681138\n",
+      "4     68269\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 2:\n",
+      "Products\n",
+      "1    114990\n",
+      "2     72751\n",
+      "3    517560\n",
+      "4     70214\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 3:\n",
+      "Products\n",
+      "1     29783\n",
+      "2     28030\n",
+      "3    163532\n",
+      "4     17917\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 4:\n",
+      "Products\n",
+      "1     168932\n",
+      "2     137286\n",
+      "3    1074350\n",
+      "4     130655\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 5:\n",
+      "Products\n",
+      "1     93320\n",
+      "2     59284\n",
+      "3    527396\n",
+      "4     81975\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 6:\n",
+      "Products\n",
+      "1     138353\n",
+      "2     136763\n",
+      "3    1112851\n",
+      "4     196056\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 7:\n",
+      "Products\n",
+      "1    24268\n",
+      "2    12583\n",
+      "3    93862\n",
+      "4    10366\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 8:\n",
+      "Products\n",
+      "1     82791\n",
+      "2     49324\n",
+      "3    521220\n",
+      "4     61429\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 9:\n",
+      "Products\n",
+      "1    110917\n",
+      "2     79708\n",
+      "3    849600\n",
+      "4    111128\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 10:\n",
+      "Products\n",
+      "1     35812\n",
+      "2     20092\n",
+      "3    174828\n",
+      "4     20138\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 11:\n",
+      "Products\n",
+      "1     47850\n",
+      "2     28872\n",
+      "3    339999\n",
+      "4     37678\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 12:\n",
+      "Products\n",
+      "1     17044\n",
+      "2      8305\n",
+      "3    153004\n",
+      "4     13037\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 13:\n",
+      "Products\n",
+      "1     4341\n",
+      "2     2994\n",
+      "3    29430\n",
+      "4     4063\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 14:\n",
+      "Products\n",
+      "1     41226\n",
+      "2     40496\n",
+      "3    324272\n",
+      "4     62344\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 15:\n",
+      "Products\n",
+      "1     5487\n",
+      "2     2590\n",
+      "3    27055\n",
+      "4     2845\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 16:\n",
+      "Products\n",
+      "1     34980\n",
+      "2     15343\n",
+      "3    318667\n",
+      "4     13069\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 17:\n",
+      "Products\n",
+      "1    14466\n",
+      "2     9026\n",
+      "3    80759\n",
+      "4    10321\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 18:\n",
+      "Products\n",
+      "1     43859\n",
+      "2     28754\n",
+      "3    256250\n",
+      "4     32127\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 19:\n",
+      "Products\n",
+      "1    106418\n",
+      "2     54589\n",
+      "3    642588\n",
+      "4     56613\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 20:\n",
+      "Products\n",
+      "1     31611\n",
+      "2     23831\n",
+      "3    157681\n",
+      "4     16510\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 21:\n",
+      "Products\n",
+      "1     7679\n",
+      "2     4280\n",
+      "3    31202\n",
+      "4     2790\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 22:\n",
+      "Products\n",
+      "1     61588\n",
+      "2     49638\n",
+      "3    561471\n",
+      "4     45384\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 23:\n",
+      "Products\n",
+      "1     62321\n",
+      "2     37775\n",
+      "3    381079\n",
+      "4     44811\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 24:\n",
+      "Products\n",
+      "1    126248\n",
+      "2     85447\n",
+      "3    533184\n",
+      "4     90261\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 25:\n",
+      "Products\n",
+      "1     27885\n",
+      "2     14765\n",
+      "3    212822\n",
+      "4     16122\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 26:\n",
+      "Products\n",
+      "1     25428\n",
+      "2     16708\n",
+      "3    158554\n",
+      "4     13942\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 27:\n",
+      "Products\n",
+      "1     151878\n",
+      "2      98681\n",
+      "3    1009507\n",
+      "4     164058\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 28:\n",
+      "Products\n",
+      "1     255221\n",
+      "2     222038\n",
+      "3    1365836\n",
+      "4     315624\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 29:\n",
+      "Products\n",
+      "1    105800\n",
+      "2     61961\n",
+      "3    621752\n",
+      "4     70165\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 30:\n",
+      "Products\n",
+      "1    151321\n",
+      "2    116193\n",
+      "3    955923\n",
+      "4    169382\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 31:\n",
+      "Products\n",
+      "1     44109\n",
+      "2     45099\n",
+      "3    189903\n",
+      "4     58497\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 32:\n",
+      "Products\n",
+      "1     5979\n",
+      "2     2609\n",
+      "3    30436\n",
+      "4     1870\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 33:\n",
+      "Products\n",
+      "1    103716\n",
+      "2     98239\n",
+      "3    646008\n",
+      "4    146697\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 34:\n",
+      "Products\n",
+      "1     91226\n",
+      "2     51081\n",
+      "3    468114\n",
+      "4     56645\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 35:\n",
+      "Products\n",
+      "1     55663\n",
+      "2     50827\n",
+      "3    297149\n",
+      "4     46880\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 36:\n",
+      "Products\n",
+      "1    114179\n",
+      "2     73402\n",
+      "3    640244\n",
+      "4     77848\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 37:\n",
+      "Products\n",
+      "1     47300\n",
+      "2     35654\n",
+      "3    189121\n",
+      "4     27678\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 38:\n",
+      "Products\n",
+      "1     41988\n",
+      "2     27861\n",
+      "3    184232\n",
+      "4     25091\n",
+      "Name: Demand, dtype: int64\n",
+      "\n",
+      "Cluster 39:\n",
+      "Products\n",
+      "1     49284\n",
+      "2     39270\n",
+      "3    139512\n",
+      "4     52335\n",
+      "Name: Demand, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize a dictionary to store the summed demands for each product within clusters\n",
+    "cluster_demand = {}\n",
+    "\n",
+    "# Iterate through each cluster and sum demands for each product\n",
+    "for cluster_idx, indices_array in enumerate(cluster_arrays):\n",
+    "    # Filter the dataframe based on indices in the current cluster\n",
+    "    cluster_customers = demand.loc[indices_array, 'Customers'].tolist()\n",
+    "    cluster_df = demand[demand['Customers'].isin(cluster_customers)]\n",
+    "    \n",
+    "    # Group by product and sum demand\n",
+    "    cluster_demand[cluster_idx] = cluster_df.groupby('Products')['Demand'].sum()\n",
+    "\n",
+    "# Print the summed demands for each product within clusters\n",
+    "for cluster_idx, demand_series in cluster_demand.items():\n",
+    "    print(f\"Cluster {cluster_idx}:\\n{demand_series}\\n\")"
    ]
   }
  ],
