--- a/clustering_final.ipynb
+++ b/clustering_final.ipynb
@@ -9,9 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_81174/1258853450.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
@@ -23,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,17 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[190, 6, 249, 183, 321, 92, 274, 400, 126, 279, 231, 67, 225, 102, 357, 378, 217, 367, 394, 20, 28, 187, 41, 54, 262, 435, 51, 96, 137, 192, 292, 286, 212, 307, 423, 336, 106, 313, 430, 417]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "closest_points_within_X = []\n",
     "\n",
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -246,18 +253,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 480000 entries, 0 to 479999\n",
-      "Data columns (total 6 columns):\n",
+      "RangeIndex: 160000 entries, 0 to 159999\n",
+      "Data columns (total 5 columns):\n",
       " #   Column                 Non-Null Count   Dtype  \n",
       "---  ------                 --------------   -----  \n",
-      " 0   Cluster                480000 non-null  object \n",
-      " 1   Products               480000 non-null  object \n",
-      " 2   Periods                480000 non-null  float64\n",
-      " 3   Scenarios              480000 non-null  float64\n",
-      " 4   DemandPeriodScenarios  480000 non-null  float64\n",
-      " 5   Closest_Index          160000 non-null  float64\n",
-      "dtypes: float64(4), object(2)\n",
-      "memory usage: 22.0+ MB\n"
+      " 0   Cluster                160000 non-null  object \n",
+      " 1   Products               160000 non-null  object \n",
+      " 2   Periods                160000 non-null  float64\n",
+      " 3   Scenarios              160000 non-null  float64\n",
+      " 4   DemandPeriodScenarios  160000 non-null  float64\n",
+      "dtypes: float64(3), object(2)\n",
+      "memory usage: 6.1+ MB\n"
      ]
     }
    ],
@@ -283,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5799/417710378.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_81174/3845555050.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
